--- a/app/src/main/res/layout/item_parking_timeline.xml
+++ b/app/src/main/res/layout/item_parking_timeline.xml
@@ -2,16 +2,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:descendantFocusability="beforeDescendants"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/tv_parking_timeline_time"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
         android:text="哈哈哈哈哈哈哈哈"
-        android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_centerInParent="true"/>
+        android:textColor="@color/black"
+        android:layout_centerHorizontal="true"
+        />
+    <TextView
+        android:id="@+id/tv_parking_timeline_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="哈哈哈哈哈哈哈哈"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:layout_below="@+id/tv_parking_timeline_time"
+        android:layout_centerHorizontal="true" />
+
+
 
 </RelativeLayout>
