--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -74,17 +74,38 @@
         app:layout_anchorGravity="bottom|center_horizontal"
         />
 
-    <TextView
-        android:id="@+id/tv_balance"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="1"
+        android:orientation="horizontal"
         android:paddingTop="36dp"
-        android:text="余额：0.00元"
-        android:textColor="@color/white"
-        android:textSize="16sp"
         app:layout_anchor="@id/tv_phoneNum"
-        app:layout_anchorGravity="bottom|center_horizontal"/>
+        app:layout_anchorGravity="bottom|center_horizontal">
+
+        <TextView
+            android:id="@+id/tv_balance"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="余额：0.00元"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            />
+
+        <TextView
+            android:id="@+id/tv_add_balance"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="充值"
+            android:textStyle="bold"
+            android:textColor="@android:color/holo_red_light"
+            android:textSize="14sp"
+            android:paddingStart="16dp"
+            />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
