--- a/app/src/main/res/layout/dialog_publish_parking.xml
+++ b/app/src/main/res/layout/dialog_publish_parking.xml
@@ -3,13 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.AppCompatSpinner
-        android:id="@+id/spinner_dialog"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_dialog"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp">
 
-    </android.support.v7.widget.AppCompatSpinner>
+    </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
         android:id="@+id/container_period"
