--- a/app/src/main/res/layout/item_rv_me.xml
+++ b/app/src/main/res/layout/item_rv_me.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
     android:background="@drawable/selector_item">
 
     <TextView
@@ -11,6 +9,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_marginLeft="32dp"/>
+        android:layout_marginStart="32dp"
+        android:layout_centerVertical="true"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tv_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:textSize="16sp"
+        android:layout_marginEnd="16dp"
+        android:visibility="gone"
+        />
+
+</RelativeLayout>
