refactor(PublishParkingActivity): use grid instead of list

--- a/app/src/main/res/drawable/bg_separator.xml
+++ b/app/src/main/res/drawable/bg_separator.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <size android:height="80dp"
-        android:width="80dp"
+    <solid
+        android:color="@color/black"
         />
 
-    <solid
-        android:color="@color/light_gray"
+    <stroke
+        android:dashWidth="2dp"
+        android:dashGap="2dp"
         />
 
 </shape>
