refactor&fix(cityActivity&searchActivity):add cities to arrays.xml and fix install bug

--- a/app/src/main/res/layout/item_city_select.xml
+++ b/app/src/main/res/layout/item_city_select.xml
@@ -12,6 +12,7 @@
         android:layout_height="64dp"
         android:layout_marginStart="30dp"
         android:gravity="left|center_vertical"
+        android:textSize="18sp"
         tools:text="北京市"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +24,7 @@
         android:id="@+id/tv_city_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="当前城市"
+        tools:text="我的城市"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="165dp"
