fix(MapSearchActivity&PublishParkingActivity): fix bugs in two activities

--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -30,6 +30,7 @@
         <FrameLayout
             android:id="@+id/fl_feedback"
             android:layout_width="match_parent"
+            android:layout_marginTop="4dp"
             android:layout_height="200dp"
             android:background="@drawable/bg_et_feedback">
 
@@ -49,8 +50,10 @@
             android:id="@+id/btn_feedback"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="提交"
             android:layout_below="@id/fl_feedback"
+            android:background="@drawable/round_button_green"
             />
 
     </RelativeLayout>
