--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -39,7 +39,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:hint="请留下您的宝贵意见"
+                android:maxLength="120"
+                android:hint="请留下您的宝贵意见(最多120字)"
                 android:textColorHint="@android:color/darker_gray"
                 android:backgroundTint="@color/white"
                 />
