--- a/app/src/main/res/layout/dialog_modify_pwd.xml
+++ b/app/src/main/res/layout/dialog_modify_pwd.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_old_pwd"
         android:layout_alignStart="@id/tv_old_pwd"
+        android:layout_marginBottom="32dp"
         />
 
     <EditText
@@ -39,7 +40,29 @@
         android:textSize="16sp"
         android:layout_toEndOf="@id/tv_new_pwd"
         android:layout_alignBaseline="@id/tv_new_pwd"
-        android:layout_alignLeft="@id/et_old_pwd"
+        android:layout_alignStart="@id/et_old_pwd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:id="@+id/tv_reassure_new_pwd"
+        android:text="确认"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_new_pwd"
+        android:layout_alignStart="@id/tv_new_pwd"
+        />
+
+    <EditText
+        android:id="@+id/et_reassure_new_pwd"
+        android:hint="请确认6位新密码"
+        android:inputType="numberPassword"
+        android:textSize="16sp"
+        android:layout_toEndOf="@id/tv_new_pwd"
+        android:layout_alignBaseline="@id/tv_reassure_new_pwd"
+        android:layout_alignStart="@id/et_new_pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
