--- a/app/src/main/res/layout/item_reserve_detail.xml
+++ b/app/src/main/res/layout/item_reserve_detail.xml
@@ -37,11 +37,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="19dp"
                 android:gravity="center_vertical"
-                android:textSize="14sp"
-                tools:text="停车时间 15：45\n离开时间 16：34\n价格 54.33元"
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                tools:text="停车时间 15：45"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="12dp" />
+
+            <TextView
+                android:id="@+id/tv_item_reserve_info2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="19dp"
+                android:layout_below="@id/tv_item_reserve_info"
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical"
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                tools:text="停车时间 15：45" />
 
             <Button
                 android:id="@+id/btn_item_reserve_function"
@@ -50,6 +64,7 @@
                 android:layout_marginEnd="29dp"
                 android:background="@drawable/round_button_green"
                 android:textSize="14dp"
+                android:textColor="@color/white"
                 android:text="车位锁"
                 android:layout_alignParentBottom="true"
                 android:layout_alignEnd="@+id/btn_item_reserve_navi" />
@@ -60,10 +75,11 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_button_green"
                 android:textSize="14dp"
+                android:textColor="@color/white"
                 android:text="取消预约"
                 android:layout_alignParentBottom="true"
                 android:layout_toStartOf="@+id/btn_item_reserve_function"
-                android:layout_marginEnd="34dp" />
+                android:layout_marginEnd="30dp" />
 
             <Button
                 android:id="@+id/btn_item_reserve_navi"
