refactor(app): use drawerLayout instead of tab

--- a/app/src/main/res/values-zh/arrays.xml
+++ b/app/src/main/res/values-zh/arrays.xml
@@ -13,6 +13,6 @@
         <item>意见反馈</item>
         <item>服务条款</item>
         <item>关于应用</item>
-        <item>退出</item>
+        <item>切换账号</item>
     </string-array>
 </resources>
