--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,7 +13,7 @@
         <item>Advice</item>
         <item>Service Contract</item>
         <item>About</item>
-        <item>Quit</item>
+        <item>Switch Account</item>
     </string-array>
 
     <string-array name="cities">
