--- a/app/src/main/res/layout/layout_top_park_fragment.xml
+++ b/app/src/main/res/layout/layout_top_park_fragment.xml
@@ -5,15 +5,23 @@
     android:background="?attr/colorPrimary"
     android:padding="8dp">
 
+    <ImageView
+        android:id="@+id/iv_open_drawer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher_logo"
+        android:layout_gravity="center_vertical"
+        />
+
     <TextView
         android:id="@+id/tv_current_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="当前城市："
+        android:text="北京市"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="2dp"
         />
 
     <ImageView
@@ -25,7 +33,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_input_location"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_width="0dp"
         android:layout_weight="1.5"
         android:layout_height="match_parent"
