--- a/app/src/main/res/layout/activity_parking_list.xml
+++ b/app/src/main/res/layout/activity_parking_list.xml
@@ -36,23 +36,39 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            android:background="@color/pale_green">
 
             <TextView
-                android:id="@+id/tv_parking_guarfee"
+                android:id="@+id/tv_parking_guaranteeFee"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_centerVertical="true"
+                android:text="担保费    ￥"
+                android:textSize="16sp"
+                android:textColor="@color/white"
                 />
+
+            <TextView
+                android:id="@+id/tv_parking_guaranteeFee_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/tv_parking_guaranteeFee"
+                android:layout_marginLeft="4dp"
+                android:layout_centerVertical="true"
+                android:text="10.00"
+                android:textSize="22sp"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/btn_parking_reserve"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/round_button_white"
                 android:text="确认预约"
+                android:textColor="@color/pale_green"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="16dp"
                 android:textSize="18sp"
