--- a/app/src/main/res/layout/item_rv_parking_list_nobtn.xml
+++ b/app/src/main/res/layout/item_rv_parking_list_nobtn.xml
@@ -1,38 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@color/white"
+    android:background="@color/shallow_green"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/tv_parking_title_nobtn"
-        android:layout_width="133dp"
-        android:layout_height="42dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginTop="8dp"
-        android:gravity="left|center_vertical"
-        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="24dp"
+        android:text="北京邮电大学科研楼停车场"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerVertical="true"/>
+
+
 
     <TextView
         android:id="@+id/tv_parking_content_nobtn"
-        android:layout_width="180dp"
-        android:layout_height="44dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="27dp"
-        android:gravity="right|center_vertical"
-        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="￥10.00/小时"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_parking_title_nobtn"
-        app:layout_constraintLeft_toRightOf="@+id/tv_parking_title_nobtn"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        />
 
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
