feat&fix: add several interface and fix bugs

--- a/app/src/main/res/layout/layout_reserve_nonetwork.xml
+++ b/app/src/main/res/layout/layout_reserve_nonetwork.xml
@@ -34,5 +34,15 @@
         android:layout_alignEnd="@+id/iv_reserve_nonetwork"
         android:layout_marginTop="25dp" />
 
+    <Button
+        android:id="@+id/btn_away_reserve_nonetwork"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/round_button_green"
+        tools:text="暂离"
+        android:layout_below="@+id/btn_reserve_nonetwork"
+        android:layout_alignEnd="@+id/iv_reserve_nonetwork"
+        android:layout_marginTop="25dp" />
+
 
 </RelativeLayout>
