--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
                 android:text="我的车锁"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="32dp"/>
 
         </LinearLayout>
 
@@ -88,7 +88,7 @@
                 android:text="我的预约"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="32dp"/>
 
         </LinearLayout>
 
@@ -107,12 +107,31 @@
                 android:text="发布车位"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="32dp"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_below="@id/ll_my_publish"
+            android:id="@+id/ll_my_wallet"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:background="@drawable/selector_item">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="充值"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:layout_marginStart="32dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_below="@id/ll_my_wallet"
             android:id="@+id/ll_setting"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -126,7 +145,7 @@
                 android:text="设置"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="32dp"/>
 
         </LinearLayout>
 
@@ -146,7 +165,7 @@
                 android:text="退出"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                android:layout_marginStart="16dp"/>
+                android:layout_marginStart="32dp"/>
 
         </LinearLayout>
 
