--- a/app/src/main/res/layout/activity_parking_timeline.xml
+++ b/app/src/main/res/layout/activity_parking_timeline.xml
@@ -60,49 +60,49 @@
 
         </in.myinnos.alphabetsindexfastscrollrecycler.IndexFastScrollRecyclerView>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/pale_green">
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:background="@color/pale_green">-->
 
-            <TextView
-                android:id="@+id/tv_parking_timeline_guaranteeFee"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="16dp"
-                android:layout_centerVertical="true"
-                android:text="担保费    ￥"
-                android:textSize="16sp"
-                android:textColor="@color/white"
-                />
+            <!--<TextView-->
+                <!--android:id="@+id/tv_parking_timeline_guaranteeFee"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentStart="true"-->
+                <!--android:layout_marginLeft="16dp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:text="担保费    ￥"-->
+                <!--android:textSize="16sp"-->
+                <!--android:textColor="@color/white"-->
+                <!--/>-->
 
-            <TextView
-                android:id="@+id/tv_parking_timeline_guaranteeFee_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/tv_parking_timeline_guaranteeFee"
-                android:layout_marginLeft="4dp"
-                android:layout_centerVertical="true"
-                android:text="10.00"
-                android:textSize="22sp"
-                android:textColor="@color/white"/>
+            <!--<TextView-->
+                <!--android:id="@+id/tv_parking_timeline_guaranteeFee_num"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_toEndOf="@id/tv_parking_timeline_guaranteeFee"-->
+                <!--android:layout_marginLeft="4dp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:text="10.00"-->
+                <!--android:textSize="22sp"-->
+                <!--android:textColor="@color/white"/>-->
 
-            <Button
-                android:id="@+id/btn_parking_timeline_reserve"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="16dp"
-                android:layout_centerVertical="true"
-                android:background="@drawable/round_button_white"
-                android:text="确认预约"
-                android:textSize="18sp"
-                android:textColor="@color/pale_green"/>
+            <!--<Button-->
+                <!--android:id="@+id/btn_parking_timeline_reserve"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_marginRight="16dp"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:background="@drawable/round_button_white"-->
+                <!--android:text="确认预约"-->
+                <!--android:textSize="18sp"-->
+                <!--android:textColor="@color/pale_green"/>-->
 
 
 
-        </RelativeLayout>
+        <!--</RelativeLayout>-->
     </LinearLayout>
 
 
