feat(app): add user balance and republish option

--- a/app/src/main/res/layout/activity_publish_parking.xml
+++ b/app/src/main/res/layout/activity_publish_parking.xml
@@ -58,7 +58,7 @@
         app:fabSize="auto"
         android:clickable="false"
         android:src="@android:drawable/ic_input_add"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|center"
         />
 
 </android.support.design.widget.CoordinatorLayout>
