--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,19 @@
                 android:visibility="invisible"
                 />
 
+            <TextView
+                android:id="@+id/tv_user_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/iv_avatar"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_marginTop="12dp"
+                android:visibility="invisible"
+                />
+
             <Button
                 android:id="@+id/bt_login"
                 android:layout_width="wrap_content"
