--- a/app/src/main/res/layout/item_rv_publish_parking.xml
+++ b/app/src/main/res/layout/item_rv_publish_parking.xml
@@ -1,31 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/selector_item">
 
     <TextView
         android:id="@+id/tv_parking_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="232421231"
+        android:textSize="18sp"
+        android:text="车位号：232421231"
         android:textColor="@color/black"
-        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
-        android:layout_centerVertical="true"
         />
 
     <TextView
         android:id="@+id/tv_parking_period"
-        android:layout_toRightOf="@id/tv_parking_id"
-        android:layout_alignBaseline="@id/tv_parking_id"
+        android:layout_below="@id/tv_parking_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="12:00 ~ 13:00"
+        android:text="预约时段：12:00 ~ 13:00"
         android:textColor="@color/colorAccent"
-        android:layout_marginLeft="32dp"
+        android:layout_alignStart="@id/tv_parking_id"
+        android:layout_marginTop="8dp"
+        />
+
+    <TextView
+        android:id="@+id/label_republish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="重复发布"
+        android:textColor="@color/gray"
+        android:layout_alignStart="@id/tv_parking_period"
+        android:layout_below="@id/tv_parking_period"
+        android:layout_marginTop="16dp"
+        />
+
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/sc_republish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/label_republish"
+        android:layout_alignBaseline="@id/label_republish"
         android:layout_marginStart="16dp"
         />
 
@@ -39,5 +57,7 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="4dp"
         />
+
+
 
 </RelativeLayout>
