--- a/app/src/main/res/layout/item_reserve_detail.xml
+++ b/app/src/main/res/layout/item_reserve_detail.xml
@@ -78,7 +78,7 @@
                 android:textColor="@color/white"
                 android:text="取消预约"
                 android:layout_alignParentBottom="true"
-                android:layout_toStartOf="@+id/btn_item_reserve_function"
+                android:layout_toStartOf="@id/btn_item_reserve_function"
                 android:layout_marginEnd="30dp" />
 
             <Button
@@ -87,7 +87,7 @@
                 android:layout_height="35dp"
                 android:background="@drawable/btn_nav"
                 android:layout_marginEnd="33dp"
-                android:layout_alignBottom="@+id/tv_item_reserve_info"
+                android:layout_alignBottom="@id/tv_item_reserve_info"
                 android:layout_alignParentEnd="true" />
 
 
