--- a/app/src/main/res/layout/item_reserve_header.xml
+++ b/app/src/main/res/layout/item_reserve_header.xml
@@ -10,6 +10,7 @@
     android:layout_marginRight="0dp"
     app:cardCornerRadius="@dimen/card_corner_radius"
     app:cardElevation="@dimen/card_header_elevation"
+    android:layout_marginBottom="8dp"
     >
 
 
@@ -20,7 +21,7 @@
         android:background="@color/pale_green">
 
         <TextView
-            android:id="@+id/tv_item_reserve_orderid"
+            android:id="@+id/tv_item_reserve_parking"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -29,25 +30,27 @@
             android:ellipsize="end"
             android:gravity="center_vertical|left"
             android:maxLines="1"
-            android:padding="8dp"
-            android:text="订单:29101923"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:text="北京邮电大学停车场"
             android:textColor="@android:color/white"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/tv_item_reserve_parking"
+            android:id="@+id/tv_item_reserve_orderid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_item_reserve_orderid"
-            android:layout_alignStart="@id/tv_item_reserve_orderid"
+            android:layout_below="@id/tv_item_reserve_parking"
+            android:layout_alignStart="@id/tv_item_reserve_parking"
             android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="center_vertical|left"
             android:maxLines="1"
-            android:padding="8dp"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
             android:textColor="@android:color/white"
-            android:textSize="18dp"
-            tools:text="北京邮电大学停车场" />
+            android:textSize="14sp"
+            tools:text="订单:29101923" />
 
         <TextView
             android:id="@+id/tv_item_reserve_time"
@@ -57,12 +60,26 @@
             android:ellipsize="end"
             android:gravity="center_vertical|left"
             android:maxLines="1"
-            android:padding="8dp"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
             android:textColor="@android:color/white"
-            android:textSize="14dp"
+            android:textSize="14sp"
             tools:text="2017.4.5 16:30 - 17:32"
-            android:layout_below="@id/tv_item_reserve_parking"
-            android:layout_alignStart="@id/tv_item_reserve_parking" />
+            android:layout_below="@id/tv_item_reserve_orderid"
+            android:layout_alignStart="@id/tv_item_reserve_orderid" />
+
+        <TextView
+            android:id="@+id/tv_item_reserve_fee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_item_reserve_time"
+            tools:text="已支付：23.45元"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:layout_alignStart="@id/tv_item_reserve_time"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            />
 
 
         <ProgressBar
@@ -70,11 +87,9 @@
             style="?android:attr/progressBarStyleSmall"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_alignBottom="@+id/iv_item_reserve"
-            android:layout_alignEnd="@+id/iv_item_reserve"
-            android:layout_alignStart="@+id/iv_item_reserve"
-            android:layout_alignTop="@+id/iv_item_reserve"
-            android:layout_marginRight="10dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="21dp"
             android:visibility="gone"
             tools:visibility="visible" />
 
@@ -82,17 +97,18 @@
             android:id="@+id/iv_item_reserve"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="21dp"
             android:src="@drawable/spinner_arrow" />
 
         <ImageView
             android:id="@+id/iv_item_reserve_cancel"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_alignTop="@+id/tv_item_reserve_parking"
-            android:layout_alignEnd="@+id/iv_item_reserve"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp"
             tools:background="@drawable/ic_order_cancel"/>
 
     </RelativeLayout>
