--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         android:background="@color/white"
+        android:clickable="true"
         >
 
         <RelativeLayout
@@ -28,15 +29,6 @@
             android:layout_width="match_parent"
             android:layout_height="192dp"
             android:background="@color/colorAccent">
-
-            <ImageView
-                android:id="@+id/iv_share"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_share"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:padding="10dp"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_avatar"
@@ -92,6 +84,15 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_marginStart="32dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="业主专用"
+                android:gravity="end"
+                android:textColor="@color/colorAccent"
+                android:layout_marginEnd="16dp"
+                />
 
         </LinearLayout>
 
