--- a/app/src/main/res/layout/activity_user_lock.xml
+++ b/app/src/main/res/layout/activity_user_lock.xml
@@ -13,7 +13,7 @@
         android:theme="@style/toolbar_theme">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/tb_userinfo"
+            android:id="@+id/tb_user_lock"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -28,24 +28,20 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="我的车位"
-            android:paddingTop="16dp"
-            android:paddingBottom="4dp"
-            android:paddingLeft="8dp"
-            android:textStyle="bold"
-            android:textColor="@color/colorAccent"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tl_user_lock"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            app:tabIndicatorHeight="2dp"
+            app:tabSelectedTextColor="@color/colorPrimaryDark"
+            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
             />
 
-        <ViewStub
-            android:id="@+id/vs_user_locks"
-            android:layout="@layout/rv_user_locks"
-            android:inflatedId="@+id/rv_user_locks"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_user_lock"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_height="match_parent"
+            />
 
     </LinearLayout>
 
