--- a/app/src/main/res/layout/item_rv_share.xml
+++ b/app/src/main/res/layout/item_rv_share.xml
@@ -20,6 +20,7 @@
         android:layout_below="@id/iv_item_share"
         android:layout_centerHorizontal="true"
         tools:text="微信好友"
+        android:textColor="@color/white"
         />
 
 </RelativeLayout>
