--- a/app/src/main/res/layout/layout_top_park_fragment.xml
+++ b/app/src/main/res/layout/layout_top_park_fragment.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/iv_open_drawer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:src="@mipmap/ic_launcher_logo"
         android:layout_gravity="center_vertical"
         />
@@ -60,5 +60,15 @@
             />
 
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/iv_share"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:src="@drawable/ic_share"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        />
 
 </LinearLayout>
